--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
   <h1>Hello from Tushar!</h1>
   <p>This is your first deployed site 🎉</p>
+  <p>This is your first deployed site 🎉</p>
+  <p>This is your first deployed site 🎉</p>
+  <p>This is your first deployed site 🎉</p>
+  <p>This is your first deployed site 🎉</p>
+  <p>This is your first deployed site 🎉</p>
   <script src="script.js"></script>
 </body>
 </html>
